[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Mirko von Leipzig <mirko.vonleipzig@gmail.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["intcode"]

[dependencies]
intcode = { path = "intcode" }